More correct HitInfo parsing, Job handle methods refactoring